--- a/gamePlayer/src/index.css
+++ b/gamePlayer/src/index.css
@@ -44,4 +44,28 @@
 	select {
 		@apply bg-theme-950 p-1;
 	}
+	@media (max-aspect-ratio: 1/1) {
+		/* Mobile */
+		#sidebar {
+			@apply h-20 w-full flex-row;
+			> div {
+				@apply flex-1;
+				img {
+					@apply h-4/5;
+				}
+			}
+		}
+	}
+	@media (min-aspect-ratio: 1/1) {
+		/* Desktop */
+		#app > div {
+			@apply flex-row;
+		}
+		#sidebar {
+			@apply h-full w-20 flex-col gap-4 py-2 max-md:overflow-y-auto;
+			> div {
+				@apply [&:nth-last-child(2)]:mt-auto;
+			}
+		}
+	}
 }
