--- a/gamePlayer/src/index.css
+++ b/gamePlayer/src/index.css
@@ -23,20 +23,24 @@
 	.box {
 		@apply bg-theme-900 border-theme-800 rounded-md border-2 p-2 shadow-lg;
 	}
-	button {
+	button,
+	button[type="submit"] {
 		@apply cursor-auto appearance-none border-2 border-b-[--low-color] border-l-[--high-color] border-r-[--low-color] border-t-[--high-color] bg-gradient-to-b from-[--high-color] to-[--low-color] px-2;
 		--high-color: theme(colors.theme.600);
 		--low-color: theme(colors.theme.700);
 	}
-	button:enabled:hover {
+	button:enabled:hover,
+	button[type="submit"]:enabled:hover {
 		--high-color: theme(colors.theme.500);
 		--low-color: theme(colors.theme.600);
 	}
-	button:enabled:active {
+	button:enabled:active,
+	button[type="submit"]:enabled:active {
 		--high-color: theme(colors.theme.700);
 		--low-color: theme(colors.theme.800);
 	}
-	button:disabled {
+	button:disabled,
+	button[type="submit"]:disabled {
 		@apply text-neutral-500;
 		--high-color: theme(colors.theme.800);
 		--low-color: theme(colors.theme.900);
