--- a/gamePlayer/src/index.css
+++ b/gamePlayer/src/index.css
@@ -45,8 +45,9 @@
 		--high-color: theme(colors.theme.800);
 		--low-color: theme(colors.theme.900);
 	}
-	select {
-		@apply bg-theme-950 p-1;
+	select,
+	input[type="number"] {
+		@apply bg-theme-950;
 	}
 	@media (max-aspect-ratio: 1/1) {
 		/* Mobile */
